GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/Integration_Message__c.object-meta.xml
<CustomObject>
    <label>Integration Message</label>
    <nameField>
        <displayFormat>IM-{0000}</displayFormat>
        <label>MsgRecordId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>