GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <formula>IntegrationLogId__r.Direction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direction</label>
    <type>Text</type>
</CustomField>