GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <formula>IntegrationLogId__r.EndTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndTime</label>
    <type>DateTime</type>
</CustomField>