GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/fields/FailureReason__c.field-meta.xml
<CustomField>
    <fullName>FailureReason__c</fullName>
    <formula>IntegrationLogId__r.FailureReason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FailureReason</label>
    <type>Text</type>
</CustomField>