GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/fields/IntegrationLogId__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IntegrationLogId</label>
    <referenceTo>Integration_Log__c</referenceTo>
    <relationshipLabel>Integration Messages</relationshipLabel>
    <relationshipName>Integration_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>