GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/fields/InvocationMethod__c.field-meta.xml
<CustomField>
    <fullName>InvocationMethod__c</fullName>
    <formula>IntegrationLogId__r.InvocationMethod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvocationMethod</label>
    <type>Text</type>
</CustomField>