GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <formula>IntegrationLogId__r.StartTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StartTime</label>
    <type>DateTime</type>
</CustomField>