GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/listViews/Bot.listView-meta.xml
<ListView>
    <fullName>Bot</fullName>
    <columns>NAME</columns>
    <columns>IntegrationLogId__c</columns>
    <columns>StartTime__c</columns>
    <columns>ObjectId__c</columns>
    <columns>Message__c</columns>
    <columns>ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Portal Referral</value>
    </filters>
    <label>Bot</label>
</ListView>