GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/listViews/Commericial_Insurance.listView-meta.xml
<ListView>
    <fullName>Commericial_Insurance</fullName>
    <columns>IntegrationLogId__c</columns>
    <columns>ObjectId__c</columns>
    <columns>Message__c</columns>
    <columns>ObjectName__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>InvocationMethod__c</columns>
    <columns>Status__c</columns>
    <columns>StartTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>InvocationMethod__c</field>
        <operation>contains</operation>
        <value>commercial</value>
    </filters>
    <label>Commericial Insurance</label>
</ListView>