GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/listViews/Forcura_Create_Case.listView-meta.xml
<ListView>
    <fullName>Forcura_Create_Case</fullName>
    <columns>InvocationMethod__c</columns>
    <columns>IntegrationLogId__c</columns>
    <columns>ObjectId__c</columns>
    <columns>Message__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>StartTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>InvocationMethod__c</field>
        <operation>contains</operation>
        <value>Forcura</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>FAIL</value>
    </filters>
    <label>Forcura Create Case</label>
</ListView>