GloablServices/keshavglobal/force-app/main/default/objects/Integration_Message__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>IntegrationLogId__c</columns>
    <columns>ObjectId__c</columns>
    <columns>Message__c</columns>
    <columns>ObjectName__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>InvocationMethod__c</columns>
    <columns>Status__c</columns>
    <columns>StartTime__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Portal Referral</value>
    </filters>
    <label>Today</label>
</ListView>